feat(adesao): :sparkles: Adicionar modelos de adesão em CAPS (#25)
* refactor(caps): :truck: Move arquivo de procedimentos individualizáveis

* chore(adesao): :wrench: Adiciona escopo

* feat(adesao): :seedling: Adiciona seed de procedimentos individuais

* chore: :wrench: Adiciona caminhos de macros do dbt_utils

* feat(adesao): :sparkles: Adiciona modelo de usuários de perfil ambulatorial em CAPS

* feat(referencias): :sparkles: Adiciona modelo com usuários que frequentaram no mês

* feat(adesao): :sparkles: Adiciona modelo com usuários que não aderiram aos CAPS

* feat(adesao): :sparkles: Adiciona modelo de perfil dos usuários por adesão

* fix: :adhesive_bandage: Corrige uso de regex

* feat(adesao): :sparkles: Adiciona modelo de perfil dos usuários por adesão p/ uso externo

* feat(adesao): :sparkles: Adiciona modelos com taxas de não-adesao

* fix(adesao): Corrige intervalo p/ evasão

* refactor: Suporta qualquer nome de campo p/ adicionar datas legíveis

* fix(adesao): :adhesive_bandage: Exclui últimas 4 competências

* fix: :adhesive_bandage: Corrige substituição de IDs de estabelecimento por nome

* perf: :card_file_box: Adiciona índice multicolunas

* fix(usuarios): :adhesive_bandage: Explicita dependência implícita

* perf(caps): :card_file_box: Adiciona índice multicolunas

* feat(adesao): :sparkles: Adiciona dados do resumo no modelo de evasão por coortes

--- a/models/ambulatorio_saude_mental/_ambulatorio_usuarios_meses_frequentaram.yml
+++ b/models/ambulatorio_saude_mental/_ambulatorio_usuarios_meses_frequentaram.yml
@@ -6,45 +6,38 @@
 version: 2
 
 models:
-  - name: _raps_usuarios_atendidos
+  - name: _ambulatorio_usuarios_meses_frequentaram
     description: >
-      Enumera os atendimentos mensais de rotina e de urgência realizados por 
-      usuários (identificados por uma chave criptografada derivada do Cartão
-      Nacional de Saúde) nos Centros de Atenção Psicossociais (CAPS) ou em
-      estabelecimentos de atenção ambulatorial em saúde mental.
-      
-      Os valores tem como base os dados enviados mensalmente ao Sistema
-      de Informações Ambulatoriais do SUS (SIASUS) e disponibilizados pelo
+      Lista o estatus da movimentação mensal de prontuários de usuários de 
+      ambulatórios de saúde mental, conforme as informações enviadas ao Sistema
+      de Informações Ambulatoriais do SUS (SIASUS) e disponibilizado pelo
       Departamento de Informática do SUS (DATASUS) em seu FTP público.
     config:
       grants:
         select: ['saude_mental_analistas', 'saude_mental_integracao']
-      alias: _raps_usuarios_atendidos
+      alias: _ambulatorio_usuarios_meses_frequentaram
       enabled: true
       indexes:
         - columns:
           - "id"
           unique: true
         - columns:
-          - "periodo_data_inicio"
-          - "periodo_id"
           - "unidade_geografica_id_sus"
           - "unidade_geografica_id"
           - "estabelecimento_id_scnes"
-          - "usuario_id_cns_criptografado"
-          unique: true
         - columns:
-          - "estabelecimento_id_scnes"
-          - "usuario_id_cns_criptografado"
           - "periodo_data_inicio"
           - "periodo_id"
+        - columns:
+          - "usuario_id_cns_criptografado"
       materialized: incremental
       persist_docs:
         relation: true
       tags:
         - "saude_mental"
-        - "internacoes"
+        - "caps"
         - "bpa_i"
-        - "raas"
         - "incremental"
+        - "ambulatorio"
+        - "referencias"
       unique_key: "id"
