--- a/models/caps/adesao/_caps_adesao_usuarios_perfil.yml
+++ b/models/caps/adesao/_caps_adesao_usuarios_perfil.yml
@@ -6,12 +6,12 @@
 version: 2
 
 models:
-  - name: _raps_usuarios_atendidos
+  - name: _caps_adesao_usuarios_perfil
     description: >
-      Enumera os atendimentos mensais de rotina e de urgência realizados por 
-      usuários (identificados por uma chave criptografada derivada do Cartão
-      Nacional de Saúde) nos Centros de Atenção Psicossociais (CAPS) ou em
-      estabelecimentos de atenção ambulatorial em saúde mental.
+      Contabiliza o total de usuários em CAPS de acordo com as
+      características demográficas, grupo do diagnóstico principal e estatus em
+      relação à adesão ou não ao processo terapêutico (medida pela 
+      continuidade do atendimento ao menos nos três meses iniciais).
       
       Os valores tem como base os dados enviados mensalmente ao Sistema
       de Informações Ambulatoriais do SUS (SIASUS) e disponibilizados pelo
@@ -19,32 +19,25 @@ models:
     config:
       grants:
         select: ['saude_mental_analistas', 'saude_mental_integracao']
-      alias: _raps_usuarios_atendidos
+      alias: _caps_adesao_usuarios_perfil
       enabled: true
       indexes:
         - columns:
           - "id"
           unique: true
         - columns:
-          - "periodo_data_inicio"
-          - "periodo_id"
           - "unidade_geografica_id_sus"
           - "unidade_geografica_id"
           - "estabelecimento_id_scnes"
-          - "usuario_id_cns_criptografado"
-          unique: true
         - columns:
-          - "estabelecimento_id_scnes"
-          - "usuario_id_cns_criptografado"
           - "periodo_data_inicio"
           - "periodo_id"
-      materialized: incremental
+      materialized: table
       persist_docs:
         relation: true
       tags:
         - "saude_mental"
-        - "internacoes"
+        - "caps"
         - "bpa_i"
         - "raas"
-        - "incremental"
-      unique_key: "id"
+        - "adesao"
