chore(sources): :truck: Move definições de fontes para diretório na raíz

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -10,7 +10,7 @@ config-version: 2
 profile: 'impulso-saude-mental'
 
 # Caminhos para pastas com recursos
-model-paths: ["models"]
+model-paths: ["models", "sources"]
 analysis-paths: ["analysis"]
 test-paths: ["tests"]
 seed-paths: ["seeds"]
