--- a/sources/siasus.yml
+++ b/sources/siasus.yml
@@ -13,18 +13,24 @@ sources:
       database: false
       schema: false
       identifier: false
+    freshness:
+      warn_after:
+        count: 31
+        period: day
+    loaded_at_field: atualizacao_data
+
 
     tables:
 
       - name: bpa_i_disseminacao
-        identifier: _siasus_bpa_i_disseminacao
+        identifier: siasus_bpa_i_disseminacao_sm_complemento
         description: >
           Arquivo de disseminação dos Boletins de Produção Ambulatorial 
           individualizados (BPA-i) do Sistema de Informações Ambulatoriais do
           SUS (SIASUS).
 
       - name: procedimentos_disseminacao
-        identifier: _siasus_procedimentos_ambulatoriais
+        identifier: siasus_procedimentos_ambulatoriais_sm_complemento
         description: >
           Arquivo de disseminação dos procedimentos do Sistema de Informações
           Ambulatoriais do SUS (SIASUS), incluindo informações resumidas de
