--- a/models/sources/sihsus.yml
+++ b/models/sources/sihsus.yml
@@ -13,6 +13,11 @@ sources:
       database: false
       schema: false
       identifier: false
+    freshness:
+      warn_after:
+        count: 31
+        period: day
+    loaded_at_field: atualizacao_data
 
     tables:
 
