fix: :bug: Corrige bugs de nomenclatura em modelos
Corrige bugs de nomenclatura no yml de caps_usuarios_novos_perfil, corrige nome de source em _matriciamentos_por_caps_ultimo_ano e remove a linha de true para id unico em internacoes_geolocalizadas

--- a/models/caps/usuarios_novos/caps_usuarios_novos_perfil.yml
+++ b/models/caps/usuarios_novos/caps_usuarios_novos_perfil.yml
@@ -42,10 +42,10 @@ models:
           - "usuario_faixa_etaria"
         - columns:
           - "unidade_geografica_id_sus"
-          - "raca_cor"
+          - "usuario_raca_cor"
         - columns:
           - "unidade_geografica_id_sus"
-          - "sexo"
+          - "usuario_sexo"
       materialized: table
       persist_docs:
         relation: true
