--- a/models/encaminhamentos_aps/aps_caps/encaminhamentos_aps_caps_resumo_ultimo_mes_horizontal.yml
+++ b/models/encaminhamentos_aps/aps_caps/encaminhamentos_aps_caps_resumo_ultimo_mes_horizontal.yml
@@ -24,7 +24,7 @@ models:
         - columns:
           - "unidade_geografica_id_sus"
           - "unidade_geografica_id"
-      materialized: view
+      materialized: table
       persist_docs:
         relation: true
       tags:
