--- a/models/encaminhamentos_aps/aps_especializada/encaminhamentos_aps_especializada_resumo_ultimo_mes_horizontal.yml
+++ b/models/encaminhamentos_aps/aps_especializada/encaminhamentos_aps_especializada_resumo_ultimo_mes_horizontal.yml
@@ -25,7 +25,7 @@ models:
         - columns:
           - "unidade_geografica_id_sus"
           - "unidade_geografica_id"
-      materialized: view
+      materialized: table
       persist_docs:
         relation: true
       tags:
