fix: :bug: Remove duplicatas do modelo de internações geolocalizadas
Remove duplicatas do modelo de internações geolocalizadas

--- a/models/internacoes/internacoes_geolocalizadas.yml
+++ b/models/internacoes/internacoes_geolocalizadas.yml
@@ -22,6 +22,7 @@ models:
       indexes:
         - columns:
           - "id"
+          unique: true
         - columns:
           - "internacao_data_inicio"
         - columns:
