feat: :bug: Adiciona coluna de id para vários modelos

--- a/models/caps/procedimentos_por_usuario/caps_procedimentos_por_usuario_por_tempo_servico.yml
+++ b/models/caps/procedimentos_por_usuario/caps_procedimentos_por_usuario_por_tempo_servico.yml
@@ -14,7 +14,11 @@ models:
         select: ['saude_mental_analistas', 'saude_mental_integracao']
       alias: caps_procedimentos_por_usuario_por_tempo_servico
       enabled: true
-      materialized: view
+      indexes:
+        - columns:
+          - "id"
+          unique: true
+      materialized: table
       persist_docs:
         relation: true
       tags:
