--- a/models/caps/usuarios_novos/caps_usuarios_novos_resumo.yml
+++ b/models/caps/usuarios_novos/caps_usuarios_novos_resumo.yml
@@ -16,6 +16,8 @@ models:
       enabled: true
       indexes:
         - columns:
+          - "id"
+        - columns:
           - "unidade_geografica_id_sus"
           - "estabelecimento"
         - columns:
