fix: Altera tipo de materialização de tabelas e corrige erros de digitação

--- a/models/comum/disponibilidade_ocupacao_por_estabelecimento.yml
+++ b/models/comum/disponibilidade_ocupacao_por_estabelecimento.yml
@@ -13,7 +13,7 @@ models:
       por categoria profissional (CBO) e por estabelecimento de saúde (SCNES).
     config:
       enabled: true
-      materialized: ephemeral
+      materialized: view
       persist_docs:
         relation: true
       tags:
