--- a/seeds/properties.yml
+++ b/seeds/properties.yml
@@ -54,11 +54,19 @@ seeds:
       quote_columns: true
       column_types:
         estabelecimento_id_scnes: "bpchar(7)"
+        municipio: "text"
+        apelido: "text"
     columns:
-      - name: estabelecimento_id_scnes
+      - name: "estabelecimento_id_scnes"
         description: >
           Código do estabelecimento com atendimento de referência ambulatorial
           em saúde mental, segundo o SCNES.
+      - name: "municipio"
+        description: >
+          Nome do município que indicou o estabelecimento ambulatorial.
+      - name: "apelido"
+        description: >
+          Apelido do estabelecimento de referência ambulatorial.
 
 
   - name: internacoes_desfechos_grupos
