docs: Altera a source de estabelecimentos para tabela personalizada para SM
Altera a source de estabelecimentos para tabela personalizada para SM

--- a/models/sources/codigos.yml
+++ b/models/sources/codigos.yml
@@ -33,7 +33,7 @@ sources:
           (acesso em 22 jun. 2022).
 
       - name: estabelecimentos
-        identifier: estabelecimentos
+        identifier: estabelecimentos_painel_sm
         description: >
           Lista de estabelecimentos de saúde, baseada no Cadastro Nacional de
           Estabelecimentos de Saúde. (WIP)
