--- a/models/caps/usuarios_ativos/perfil/caps_usuarios_ativos_perfil_raca.yml
+++ b/models/caps/usuarios_ativos/perfil/caps_usuarios_ativos_perfil_raca.yml
@@ -29,7 +29,6 @@ models:
       indexes:
         - columns:
           - "id"
-          unique: true
         - columns:
           - "competencia"
           - "periodo_id"
@@ -37,6 +36,10 @@ models:
           - "unidade_geografica_id_sus"
           - "unidade_geografica_id"
           - "estabelecimento"
+        - columns:
+          - "unidade_geografica_id_sus"
+          - "estabelecimento"
+          - "usuario_raca_cor"
       materialized: table
       persist_docs:
         relation: true
