docs: :memo: Atualiza documentação para desabilitar modelo de internações geolocalizadas

--- a/models/internacoes/internacoes_geolocalizadas.yml
+++ b/models/internacoes/internacoes_geolocalizadas.yml
@@ -18,7 +18,7 @@ models:
       grants:
         select: ['saude_mental_analistas', 'saude_mental_integracao']
       alias: internacoes_geolocalizadas
-      enabled: true
+      enabled: false
       indexes:
         - columns:
           - "id"
