style: :memo: Altera materialização de modelos finais (do painel) para table
Altera materialização de modelos finais (do painel) para table

--- a/models/ambulatorio_saude_mental/ambulatorio_atendimentos_resumo_ultimo_mes.yml
+++ b/models/ambulatorio_saude_mental/ambulatorio_atendimentos_resumo_ultimo_mes.yml
@@ -28,7 +28,7 @@ models:
           - "estabelecimento"
           - "ocupacao"
           unique: true
-      materialized: view
+      materialized: table
       persist_docs:
         relation: true
       tags:
