--- a/models/caps/producao/caps_procedimentos_por_hora_resumo.yml
+++ b/models/caps/producao/caps_procedimentos_por_hora_resumo.yml
@@ -20,7 +20,7 @@ models:
           - "unidade_geografica_id_sus"
           - "periodo_data_inicio"
           - "periodo_id"
-      materialized: view
+      materialized: table
       persist_docs:
         relation: true
       tags:
