--- a/models/consultorio_na_rua/consultorio_na_rua_atendimentos.yml
+++ b/models/consultorio_na_rua/consultorio_na_rua_atendimentos.yml
@@ -32,7 +32,7 @@ models:
         - columns:
           - "periodo"
           - "periodo_ordem"
-      materialized: view
+      materialized: table
       persist_docs:
         relation: true
       tags:
