--- a/models/matriciamentos/matriciamentos_por_caps_ultimo_ano.yml
+++ b/models/matriciamentos/matriciamentos_por_caps_ultimo_ano.yml
@@ -22,7 +22,7 @@ models:
         - columns:
           - "unidade_geografica_id_sus"
           - "estabelecimento"
-      materialized: view
+      materialized: table
       persist_docs:
         relation: true
       tags:
