--- a/models/matriciamentos/matriciamentos_por_municipio_ultimo_ano.yml
+++ b/models/matriciamentos/matriciamentos_por_municipio_ultimo_ano.yml
@@ -20,7 +20,7 @@ models:
           - "unidade_geografica_id"
         - columns:
           - "estabelecimento"
-      materialized: view
+      materialized: table
       persist_docs:
         relation: true
       tags:
