fix: :bug: Corrige bugs de índices e adiciona ID para resumo de CAPS

--- a/models/caps/producao/caps_procedimentos_por_tipo.yml
+++ b/models/caps/producao/caps_procedimentos_por_tipo.yml
@@ -21,7 +21,7 @@ models:
         - columns:
           - "unidade_geografica_id"
           - "unidade_geografica_id_sus"
-          - "periodo_data_inicio"
+          - "competencia"
           - "periodo_id"
       materialized: table
       persist_docs:
