Acrescenta combinações implícitas para vários modelos e corrige bugs (#29)
* feat: :construction: [WIP] Adiciona modelos de perfil quebrados por gráfico para usuários ativos

[WIP] Adiciona modelos de perfil quebrados por gráfico para usuários ativos

* fix: :construction: [WIP] Corrige ID do modelo de usuários ativos perfil - CID

* fix: :construction: Adiciona modelos de perfil quebrados por gráfico para usuários ativos

* fix: :construction: [WIP] Corrige group by do modelo de genero e faixa etária para usuários ativos

[WIP] Corrige group by do modelo de genero e faixa etária para usuários ativos

* fix: :construction: [WIP] Corrige group by do modelo de genero e faixa etaria

* style: :pencil2: Corrige typo em nome de colunas

* perf: :construction: [WIP] Cria modelos reduzidos sem subtotais para todos os estabelecimentos

Cria modelos reduzidos sem subtotais para todos os estabelecimentos

* feat: :fire: Adiciona macro para remover subtotais de estabelecimentos

* perf: :zap: [WIP] Exclui CIDs que não foram registrados nenhuma vez no município

[WIP] Exclui CIDs que não foram registrados nenhuma vez no município

* perf: :construction: [WIP] Remove CIDs que não apareceram nenhuma vez no município

* fix: :pencil2: [WIP] Corrige typo

* fix: :zap: [WIP] Conserta bug de combinações por perfil e idade de cuidado

* fix: :construction: [WIP] Conserta bug de linha_perfil e linha_idade em revelar_combinacoes_implicitas

[WIP] Conserta bug de linha_perfil e linha_idade em revelar_combinacoes_implicitas

* chore: :seedling: Adiciona dois novos municípios nos modelos que filtram para municípios selecionados

Adiciona dois novos municípios nos modelos que filtram para municípios selecionados

* fix: :bug: Corrige typo que gera bug ao rodar modelo

* refactor: :fire: Remove modelos de perfil de usuários ativos não mais utilizados

Remove modelos de perfil de usuários ativos não mais utilizados

* feat: :recycle: Refatora mode

--- a/models/consultorio_na_rua/consultorio_na_rua_atendimentos.yml
+++ b/models/consultorio_na_rua/consultorio_na_rua_atendimentos.yml
@@ -23,16 +23,15 @@ models:
           - "competencia"
           - "nome_mes"
         - columns:
-          - "tipo_equipe"
           - "tipo_producao"
         - columns:
           - "quantidade_registrada"
           - "quantidade_registrada_anterior"
-          - "dif_quantidade_registrada"
+          - "dif_quantidade_registrada_anterior"
         - columns:
           - "periodo"
           - "periodo_ordem"
-      materialized: view
+      materialized: table
       persist_docs:
         relation: true
       tags:
