--- a/models/matriciamentos/matriciamentos_por_municipio_ultimo_ano.yml
+++ b/models/matriciamentos/matriciamentos_por_municipio_ultimo_ano.yml
@@ -18,9 +18,7 @@ models:
         - columns:
           - "unidade_geografica_id_sus"
           - "unidade_geografica_id"
-        - columns:
-          - "estabelecimento"
-      materialized: view
+      materialized: table
       persist_docs:
         relation: true
       tags:
