--- a/models/caps/producao/caps_procedimentos_por_hora_resumo.yml
+++ b/models/caps/producao/caps_procedimentos_por_hora_resumo.yml
@@ -18,9 +18,9 @@ models:
         - columns:
           - "unidade_geografica_id"
           - "unidade_geografica_id_sus"
-          - "periodo_data_inicio"
+          - "competencia"
           - "periodo_id"
-      materialized: view
+      materialized: table
       persist_docs:
         relation: true
       tags:
