--- a/models/caps/usuarios_ativos/perfil/sem_subtotais_linha_idade/caps_usuarios_ativos_perfil_condicao_semsubtotais.yml
+++ b/models/caps/usuarios_ativos/perfil/sem_subtotais_linha_idade/caps_usuarios_ativos_perfil_condicao_semsubtotais.yml
@@ -6,7 +6,7 @@
 version: 2
 
 models:
-  - name: caps_usuarios_ativos_perfil
+  - name: caps_usuarios_ativos_perfil_condicao_semsubtotais
     description: >
       Número de usuários que tiveram movimentação do prontuário na competência
       de referência (usuários que "frequentaram no mês"); dos que tiveram
@@ -16,8 +16,7 @@ models:
       "tornando-se inativo").
       
       Os valores são somados para cada combinação de estabelecimento de saúde
-      (apenas CAPS), período de referência, e categorias de sexo, raça/cor,
-      faixa etária, e grupo do diagnóstico principal (conforme a CID-10).
+      (apenas CAPS), período de referência, e categorias de grupo do diagnóstico principal (conforme a CID-10).
       
       Os valores tem como base os dados enviados mensalmente ao Sistema
       de Informações Ambulatoriais do SUS (SIASUS) e disponibilizados pelo
@@ -25,12 +24,11 @@ models:
     config:
       grants:
         select: ['saude_mental_analistas', 'saude_mental_integracao']
-      alias: caps_usuarios_ativos_perfil
+      alias: caps_usuarios_ativos_perfil_condicao_semsubtotais
       enabled: true
       indexes:
         - columns:
           - "id"
-          unique: true
         - columns:
           - "competencia"
           - "periodo_id"
@@ -38,6 +36,11 @@ models:
           - "unidade_geografica_id_sus"
           - "unidade_geografica_id"
           - "estabelecimento"
+        - columns:
+          - "unidade_geografica_id_sus"
+          - "estabelecimento"
+          - "usuario_situacao_rua"
+          - "usuario_abuso_substancias"
       materialized: table
       persist_docs:
         relation: true
