--- a/models/reducao_danos/_reducao_danos_acoes_por_estabelecimento_12meses.yml
+++ b/models/reducao_danos/_reducao_danos_acoes_por_estabelecimento_12meses.yml
@@ -21,7 +21,13 @@ models:
         - columns:
           - "unidade_geografica_id_sus"
           - "unidade_geografica_id"
-      materialized: view
+          - "estabelecimento_id_scnes"
+        - columns:
+          - "estabelecimento_id_scnes"
+          - "profissional_vinculo_ocupacao_id_cbo2002"
+          - "a_partir_de"
+          - "ate"
+      materialized: table
       persist_docs:
         relation: true
       tags:
