--- a/models/caps/procedimentos_por_usuario/_caps_procedimentos_por_usuario_por_tempo_servico.yml
+++ b/models/caps/procedimentos_por_usuario/_caps_procedimentos_por_usuario_por_tempo_servico.yml
@@ -18,7 +18,7 @@ models:
         - columns:
           - "id"
           unique: true
-      materialized: view
+      materialized: table
       persist_docs:
         relation: true
       tags:
