--- a/models/sources/scnes.yml
+++ b/models/sources/scnes.yml
@@ -32,3 +32,9 @@ sources:
           profissionais/prestadores de serviços e estabelecimentos de saúde
           registrados no Sistema do Cadastro Nacional de Estabelecimentos de
           Saúde (SCNES).
+
+      - name: estabelecimentos_habilitacoes
+        identifier: scnes_habilitacoes_disseminacao
+        description: >
+          Arquivo de disseminação com dados de habilitação dos estabelecimentos 
+          de saúde registrados no Cadastro Nacional de Estabelecimentos de Saúde (CNES).
